--- a/lesson13/temples.html
+++ b/lesson13/temples.html
@@ -43,8 +43,9 @@
             <div>
                 <img src="images/floridaTemple.jpg" alt="FloridaTemple" class="heroImg">
             </div>
-            <div class="temples"><!--temple content goes here-->
-                <section>
+            <div class="temple_closure"></div>
+            <!--<div class="temples"><--temple content goes here
+                <section><--Adelaide Temple
                     <h2>Adelaide Australia Temple</h2>
                     <img src="https://media.ldscdn.org/images/media-library/temples/adelaide-australia/adelaide-australia-temple-lds-1670450-gallery.jpg" alt="Adelaide Australia Temple">
                     <p>announced: 17 March 1999</p>
@@ -59,10 +60,27 @@
                           <li>No patron housing</li>
                           <li>No distribution center nearby</li>
                       </ul>
-
                     </p>
                 </section>
-            </div>
+                <div class="temple_closure"></div>
+                <section><--Accra Ghana Temple--
+                    <h2>Accra Ghana Temple</h2>
+                    <img src="https://media.ldscdn.org/images/media-library/temples/accra-ghana/accra-ghana-temple-lds-249027-gallery.jpg" alt="Accra Ghana Temple">
+                    <p>Announced: 16 February 1998</p>
+                    <p>Groundbreaking: 16 November 2001</p>
+                    <p>Dedicated: 11 January 2004</p>
+                    <p>Telephone:(233) 302-650-123</p>
+                    <p>Address: Accra Ghana Temple Complex 57 Independence Avenue,North Ridge, P.M.B CT 209, Cantonments</p>
+                    <p>Services:
+                      <ul>
+                          <li>No clothing Rental</li>
+                          <li>No cafeteria</li>
+                          <li>Patron housing available</li>
+                          <li>Distribution center nearby</li>
+                      </ul>
+                    </p>
+                </section>
+            </div>-->
 
             <section class="contactInfo"><!--end of temple content section-->
                 <div>
@@ -91,6 +109,7 @@
             <p><span id="day"></span></p> 
                            
         </footer>
+        <script src="js/closure.js"></script>
         <!--<script src="js/templeClosure.js"></script>
         <script src="js/date.js"></script>
         <script src="js/updates.js"></script>
