--- a/lesson13/index.html
+++ b/lesson13/index.html
@@ -46,7 +46,7 @@
                 <img class="mySlides heroImg" src="images/ordinanceroom_paraguayTemple_large.jpeg" alt="Ordinance Room">
                 <img class="mySlides heroImg" src="images/rexburg-temple-775365-large.jpg" alt="Rexburg Idaho">
                 <img class="mySlides heroImg" src="images/apia-samoa-temple-lds-large.jpg" alt="Apia Samoa Temple">
-                <img class="mySlides heroImg" src="images/angel_moroni.jpg" alt="Angel Moroni" class="heroImg">
+                <img class="mySlides heroImg" src="images/angel_moroni.jpg" alt="Angel Moroni" >
                 <img class="mySlides heroImg" src="images/accra-ghana-temple-759298-wallpaper.jpg" alt="Accra Ghana Temple" >
                 
                 <div class="heroText">
@@ -59,6 +59,7 @@
             <!---Summary of a chosen temple-->
             <div class="temple_area">
                 <section>
+                    <h2>Summary of Johannesburg Temple</h2>
                     <img src="images/johannesburg-south-africa-temple-lds.jpg" alt="Johannesburg Temple">
                     <div>
                         <table>
