--- a/lesson13/services.html
+++ b/lesson13/services.html
@@ -43,9 +43,9 @@
         </header>
         <main><!--services available-->
             <div>
-                <img class="mySlides" src="images/children_room.jpg" alt="Amenities" class="heroImg">
-                <img class="mySlides" src="images/indoor-swimming-pool.jpg" alt="Amenities" class="heroImg">
-                <img class="mySlides" src="images/architecture-carpet-chandeliers.jpg" alt="Amenities" class="heroImg">
+                <img class="mySlides heroImg" src="images/children_room.jpg" alt="Amenities" >
+                <img class="mySlides heroImg" src="images/indoor-swimming-pool.jpg" alt="Amenities" >
+                <img class="mySlides heroImg" src="images/architecture-carpet-chandeliers.jpg" alt="Amenities" >
             </div>
             <h2 class="amenitiesHeading">Amenities and Services</h2>
             <div class="specialServices">
