--- a/finalProject/index.html
+++ b/finalProject/index.html
@@ -5,11 +5,11 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Temple Inn Project:CIT230 BYUI">
-        <!--<link rel="shortcut icon" href = "images/myfavicon.ico" type="image/x-icon">-->
+        <link rel="shortcut icon" href = "images/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href = "css/normalize.css">
         <link rel="stylesheet" href="css/small.css">
         <link rel="stylesheet" href = "css/middle.css">
-        <!--<link rel="stylesheet" href = "css/large.css">-->
+        <link rel="stylesheet" href = "css/large.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
         <script src="js/toggle.js"></script>
     </head>
