--- a/finalProject/temples.html
+++ b/finalProject/temples.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Temple Inn Project:CIT230 BYUI">
-        <!--<link rel="shortcut icon" href = "images/myfavicon.ico" type="image/x-icon">-->
+        <link rel="shortcut icon" href = "images/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href = "css/normalize.css">
         <link rel="stylesheet" href="css/small.css">
         <link rel="stylesheet" href = "css/middle.css">
