--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li>Lesson 10:<a href="/lesson10/api-test.html">API Test</a> | <a href="/lesson10/preston-10.html">Preston Weather API </a> </li>
                 <li>Lesson 11:<a href="/lesson11/index.html">Completed Site</a></li>
                 <li>Lesson 12:<a href="/lesson12/index.html">Preproessors</a></li>
-                <li>Lesson 13:<a href="finalProject/index.html">Homw</a></li>
+                <li>Lesson 13:<a href="finalProject/index.html">Home</a></li>
                 
 
             </ul>
