--- a/finalProject/temples.html
+++ b/finalProject/temples.html
@@ -25,7 +25,7 @@
             <nav><!--navigation here-->
                 <ul class="navigationbar">
                     <li><a href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
-                    <li><a href ="home.html">Home</a></li>
+                    <li><a href ="index.html">Home</a></li>
                     <li><a href ="temples.html" class="active" >Temples</a></li>
                     <li class="dropdown"><a href="services.html" class="dropbtn">Services</a>
                         <div class="dropdown_content">
