--- a/finalProject/templeMissionary.html
+++ b/finalProject/templeMissionary.html
@@ -19,7 +19,7 @@
             <picture><img src ="images/logo_hotel3.png" alt = "Temple Inn Logo" > </picture>
             <section class="headings">
                 <div>
-                    <h1>Temple Inn and Suites</h1>
+                    <h1>Temple Inn & Suites</h1>
                     <p class="motto">Feel at home</p>
                 </div>
             </section>
