--- a/finalProject/reception.html
+++ b/finalProject/reception.html
@@ -80,17 +80,17 @@
                   </div>
                   <!---social media content-->
                   <div class="mediaIcons">
-                      <a target="_blank" href="https://www.facebook.com">
+                      <a target="_blank" href="https://www.facebook.com" rel="noreferrer noopener">
                           <img src="images/facebook_icon.png" alt="Facebook icon" ></a>
-                      <a target="_blank" href="https://www.instagram.com">                                                                                                                                     
+                      <a target="_blank" href="https://www.instagram.com" rel="noreferrer noopener">                                                                                                                                     
                           <img src="images/instagram_icon.png" alt="Instagram icon" ></a>
-                      <a target="_blank" href="https://www.twitter.com">
+                      <a target="_blank" href="https://www.twitter.com" rel="noreferrer noopener">
                           <img src="images/twitter_icon.png" alt="Twitter icon"></a> 
                   </div>
                 </section>
         </main>
         <footer>
-            <p>&copy;<span id="currentYear"></span>Temple Inn and Suites|Lusanda Mavuma|<a href="https://www.templesuites.org"></a></p>
+            <p>&copy;<span id="currentYear"></span>Temple Inn & Suites|Lusanda Mavuma|<a href="https://www.templesuites.org"></a></p>
              
             <p><span id="day"></span></p> 
             
